# eggui

./: CMakeLists.txt  README.md
examples/: some_test.cxx
include/eggui/: animation.hxx  button.hxx  canvas.hxx  constants.hxx  container.hxx  eggui.hxx  event.hxx  graphics.hxx  input.hxx  label.hxx  point.hxx  scrollable.hxx  switch.hxx  text.hxx  widget.hxx  window.hxx
src/: button.cxx  calc.cxx  calc.hxx  canvas.cxx  container.cxx  graphics.cxx  input.cxx  label.cxx  main.cxx  managers.cxx  managers.hxx  roboto_mono.bin.h  scrollable.cxx  switch.cxx  text.cxx  theme.hxx  utils.hxx  widget.cxx  window.cxx
src/utils/: swap_remove.hxx
